Update message about telephone lines to telephone system

--- a/modal.html
+++ b/modal.html
@@ -7,7 +7,7 @@
         class="modal-logo"
       />
       <div class="modal-message">
-        <p>We are currently experiencing technical difficulties with our telephone lines. To get in contact, please utilise the form on our <a href="/contact-us#contact-form" class="modal-link">contact us</a> page or email <a href="mailto:websales@cwberry.com" class="modal-link">websales@cwberry.com</a>.</p>
+        <p>We are currently experiencing technical difficulties with our telephone system. To get in contact, please utilise the form on our <a href="/contact-us#contact-form" class="modal-link">contact us</a> page or email <a href="mailto:websales@cwberry.com" class="modal-link">websales@cwberry.com</a>.</p>
       </div>
     </div>
  </div>
